fix z-index header

--- a/app/components/Header/Header.scss
+++ b/app/components/Header/Header.scss
@@ -4,6 +4,7 @@ header {
   width: 100%;
   position: fixed;
   top: 0;
+  z-index: 100;
 }
 
 .header-top {
@@ -49,7 +50,7 @@ header {
 
 .header-banner {
   width: 100%;
-  margin: 0 auto;
+  margin: 50px auto 0;
   display: block;
   max-height: 250px;
   margin-bottom: 20px;
