--- a/app/components/Pagination/Pagination.scss
+++ b/app/components/Pagination/Pagination.scss
@@ -1,5 +1,6 @@
 .pagination {
   margin: 30px auto;
+  padding: 0;
   text-align: center;
 
   ul {
